style.css
body {
  background-color: rgb(129, 60, 3);
}


/* Header settings */
header {
  color: #9e4d01; 
  font-family:'Times New Roman', Times, serif;
  font-size: 30pt;
  font-weight: bold;
  padding-top: 10px;
  padding-bottom: 10px;
  border-bottom: solid 3px lightgray;
}

.container-xs {
  max-width: 220px;
  margin: auto;
  color: white
}

/* Settings for thumbnail in About Me section */
.img-thumbnail {
  width: 20%;
  height: auto;
  max-width: 200px;
  min-width: 50px;
  margin-left: 15px;
  float: right;
}


/* Settings for pictures on portfolio page */
.img {
  margin-bottom: 20px;
  max-height: 350px;
  max-width: 350px;
  min-width: 150px;
}

/* Used to pad rows inside container */
.row {
  padding: 20px;
}



footer {
    /*position: fixed;*/
    left: 0;
    right: 0;
    bottom: 0;
    padding-top: 10px;
    width: 100%;
    border-color: rgb(13, 37, 36);
    color: white;
    text-align: center;
    font-size: smaller;
    font-family:Arial, Helvetica, sans-serif;
    background-color: #666666;
    border-top: solid 5px #9e4d01;
}

@media only screen and (max-width: 767px) {
    html {
       background-image: url(/assets/redflower.jpg);
    }
  }

  @media screen and (min-width: 1260px) {
    .container-xs {
        max-width: 1100px;
    }

    .img-thumbnail {
        max-width: 350px;
    }

    .form-control {
        max-width: 500px;
    }
}  

